adds shortstories.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class=main>
     <div class='title'>alelouis.eu</div>
-    <div class='desc'>~/internet-things<span class='prompt'>$</span></div>
+    <div class='desc'>~/home/alelouis<span class='prompt'>$</span></div>
     <div class='links'>
       <ul>
         <ion-item>
