adds jinja templating for shortstories update

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <div class='links'>
       <ul>
         <ion-item>
-          <ion-icon item-start name="logo-twitter" class="icon"></ion-icon><span class='text'><a target="_blank" href='https://twitter.com/Wimacod'> Twitter</span></a></br>
+          <ion-icon item-start color="bright" name="logo-twitter" class="icon"></ion-icon><span class='text'><a target="_blank" href='https://twitter.com/Wimacod'> Twitter</span></a></br>
         </ion-item>
         <ion-item>
-          <ion-icon item-start name="logo-github" class="icon"></ion-icon><span class='text'><a target="_blank" href='https://github.com/alelouis'> Github</span></a></br>
+          <ion-icon item-start color="bright" name="logo-github" class="icon"></ion-icon><span class='text'><a target="_blank" href='https://github.com/alelouis'> Github</span></a></br>
         </ion-item>
         <ion-item>
-          <ion-icon item-start name="library-sharp" class="icon"></ion-icon><span class='text'><a target="_blank" href='https://alelouis.github.io/'> Blog</span></a></br>
+          <ion-icon item-start color="bright" name="library-sharp" class="icon"></ion-icon><span class='text'><a target="_blank" href='https://alelouis.github.io/'> Blog</span></a></br>
         </ion-item>
         <ion-item>
-          <ion-icon item-start name="planet-sharp" class="icon"></ion-icon><span class='text'><a target="_blank" href='https://alelouis-sf.github.io/'> Short Stories</span></a></br>
+          <ion-icon item-start color="bright" name="planet-sharp" class="icon"></ion-icon><span class='text'><a target="_blank" href='shortstories.html'> Nouvelles</span></a></br>
         </ion-item>
         <ion-item>
-          <ion-icon item-start name="musical-notes-sharp" class="icon"></ion-icon><span class='text'><a target="_blank" href='/https://www.youtube.com/channel/UCUWRUMnMP50v4x0CI2WMVHw'> Youtube (music)</span></a></br>
+          <ion-icon item-start color="bright" name="musical-notes-sharp" class="icon"></ion-icon><span class='text'><a target="_blank" href='https://www.youtube.com/channel/UCUWRUMnMP50v4x0CI2WMVHw'> Musique</span></a></br>
         </ion-item>
       </ul>
     </div>
