--- a/shortstories.html
+++ b/shortstories.html
@@ -8,55 +8,135 @@
   <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 	<title>shortstories.alelouis.eu</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+	@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
   </style> 
 	<link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
   <div class=main-stories>
-    <div class='title'>alelouis.eu</div>
-    <div class='desc'>~/home/alelouis/short-stories<span class='prompt'>$</span></div>
-    <div class='links'>
-      <ul>
-        <ion-item>
-          <ion-icon item-start name="reorder-two-outline" color='primary' class="icon"></ion-icon>
-          <span class='text'>
-            <a target="_blank" href='https://www.dropbox.com/s/eba0x6onv74np3d/Cyber-ange%20Gardiens.pdf?dl=0'>
-             Cyber-Anges Gardiens
-          </span><span class='latest'>(latest)</span></ion-icon>
-        </ion-item></br>
-          <ion-icon name="document-text-outline" class='icon' color="danger"></ion-icon><span class='pdf'>PDF</span>
-          <ion-icon name="document-text-outline" class='icon' color="warning"></ion-icon><span class='md'>MD</span>
-        </ion-item></a>
-        <span class='date'>19 Septembre 2020</span></br>
-
-        <ion-item>
-          <ion-icon item-start name="reorder-two-outline" color='bright' class="icon"></ion-icon>
-          <span class='text'>
-            <a target="_blank" href='https://www.dropbox.com/s/icmp9c0knby50z2/Chass%C3%A9s%20Crois%C3%A9s.pdf?dl=0'>
-             Chassés Croisés
-          </span></ion-icon>
-        </ion-item></br>
-          <ion-icon name="document-text-outline" class='icon' color="danger"></ion-icon><span class='pdf'>PDF</span>
-          <ion-icon name="document-text-outline" class='icon' color="warning"></ion-icon><span class='md'>MD</span>
-        </ion-item></a>
-        <span class='date'>09 Septembre 2020</span></br>
-
-        <ion-item>
-          <ion-icon item-start name="reorder-two-outline" color='bright' class="icon"></ion-icon>
-          <span class='text'>
-            <a target="_blank" href='https://www.dropbox.com/s/1qkq7qwr7i48brc/Brasier%20Lunaire.pdf?dl=0'>
-             Brasier Lunaire
-          </span></ion-icon>
-        </ion-item></br>
-          <ion-icon name="document-text-outline" class='icon' color="danger"></ion-icon><span class='pdf'>PDF</span>
-          <ion-icon name="document-text-outline" class='icon' color="warning"></ion-icon><span class='md'>MD</span>
-        </ion-item></a>
-        <span class='date'>10 Mai 2020</span></br>
-
-      </ul>
-    </div>
-    </div>
+	<div class='title'><a href='index.html'> alelouis.eu</div></a>
+	<div class='desc'>~/home/alelouis/short-stories<span class='prompt'>$</span></div>
+	<div class='links'>
+	  <ul>
+		
+			<span class='story'>
+			<ion-item>
+			  <ion-icon item-start name="reorder-two-outline" color='bright' class="icon"></ion-icon>
+			  <span class='text'>
+				 Le Spleen du Robot
+			  </span></ion-icon>
+			</ion-item></br>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/pdf/le-spleen-du-robot.pdf' download>
+				<ion-icon name="document-text-outline" class='icon' color="danger"></ion-icon>
+				<span class='pdf'>PDF</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/md/le-spleen-du-robot.md' download>
+				<ion-icon name="document-text-outline" class='icon' color="warning"></ion-icon>
+				<span class='md'>MD</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/epub/le-spleen-du-robot.epub' download>
+				<ion-icon name="document-text-outline" class='icon' style="color: #10dc60" ></ion-icon>
+				<span class='epub'>EPUB</span>
+			  </a>
+			</ion-item>
+			<span class='date'>30 Octobre 2021</span></br>
+			</span>
+		
+			<span class='story'>
+			<ion-item>
+			  <ion-icon item-start name="reorder-two-outline" color='bright' class="icon"></ion-icon>
+			  <span class='text'>
+				 oekfh24
+			  </span></ion-icon>
+			</ion-item></br>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/pdf/oekfh24.pdf' download>
+				<ion-icon name="document-text-outline" class='icon' color="danger"></ion-icon>
+				<span class='pdf'>PDF</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/md/oekfh24.md' download>
+				<ion-icon name="document-text-outline" class='icon' color="warning"></ion-icon>
+				<span class='md'>MD</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/epub/oekfh24.epub' download>
+				<ion-icon name="document-text-outline" class='icon' style="color: #10dc60" ></ion-icon>
+				<span class='epub'>EPUB</span>
+			  </a>
+			</ion-item>
+			<span class='date'>28 Décembre 2020</span></br>
+			</span>
+		
+			<span class='story'>
+			<ion-item>
+			  <ion-icon item-start name="reorder-two-outline" color='bright' class="icon"></ion-icon>
+			  <span class='text'>
+				 Cyber-Anges Gardiens
+			  </span></ion-icon>
+			</ion-item></br>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/pdf/cyber-anges-gardiens.pdf' download>
+				<ion-icon name="document-text-outline" class='icon' color="danger"></ion-icon>
+				<span class='pdf'>PDF</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/md/cyber-anges-gardiens.md' download>
+				<ion-icon name="document-text-outline" class='icon' color="warning"></ion-icon>
+				<span class='md'>MD</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/epub/cyber-anges-gardiens.epub' download>
+				<ion-icon name="document-text-outline" class='icon' style="color: #10dc60" ></ion-icon>
+				<span class='epub'>EPUB</span>
+			  </a>
+			</ion-item>
+			<span class='date'>19 Septembre 2020</span></br>
+			</span>
+		
+			<span class='story'>
+			<ion-item>
+			  <ion-icon item-start name="reorder-two-outline" color='bright' class="icon"></ion-icon>
+			  <span class='text'>
+				 Chassés Croisés
+			  </span></ion-icon>
+			</ion-item></br>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/pdf/chasses-croises.pdf' download>
+				<ion-icon name="document-text-outline" class='icon' color="danger"></ion-icon>
+				<span class='pdf'>PDF</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/md/chasses-croises.md' download>
+				<ion-icon name="document-text-outline" class='icon' color="warning"></ion-icon>
+				<span class='md'>MD</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/epub/chasses-croises.epub' download>
+				<ion-icon name="document-text-outline" class='icon' style="color: #10dc60" ></ion-icon>
+				<span class='epub'>EPUB</span>
+			  </a>
+			</ion-item>
+			<span class='date'>09 Septembre 2020</span></br>
+			</span>
+		
+			<span class='story'>
+			<ion-item>
+			  <ion-icon item-start name="reorder-two-outline" color='bright' class="icon"></ion-icon>
+			  <span class='text'>
+				 Brasier Lunaire
+			  </span></ion-icon>
+			</ion-item></br>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/pdf/brasier-lunaire.pdf' download>
+				<ion-icon name="document-text-outline" class='icon' color="danger"></ion-icon>
+				<span class='pdf'>PDF</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/md/brasier-lunaire.md' download>
+				<ion-icon name="document-text-outline" class='icon' color="warning"></ion-icon>
+				<span class='md'>MD</span>
+			  </a>
+			  <a href='https://raw.githubusercontent.com/alelouis/short-stories/main/epub/brasier-lunaire.epub' download>
+				<ion-icon name="document-text-outline" class='icon' style="color: #10dc60" ></ion-icon>
+				<span class='epub'>EPUB</span>
+			  </a>
+			</ion-item>
+			<span class='date'>10 Mai 2020</span></br>
+			</span>
+		
+	  </ul>
+	</div>
+	</div>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 </body>
 </html>
